native async function

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,7 +1,9 @@
-{{page-title "EmberConcurrency"}}
-
-{{!-- The following component displays Ember's default welcome message. --}}
-<WelcomePage />
-{{!-- Feel free to remove this! --}}
+{{page-title 'EmberConcurrency'}}
+<h1>Demo one</h1>
+<DemoOne />
+{{! <DemoOne /> }}
+{{! <DemoOne /> }}
+{{! <DemoOne /> }}
+{{! <DemoOne /> }}
 
 {{outlet}}
