comp for task decorator

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,7 +1,8 @@
 {{page-title 'EmberConcurrency'}}
-<h1>Demo one</h1>
-<DemoOne />
+{{!-- <h1>Demo one</h1> --}}
 {{! <DemoOne /> }}
+<h1>Demo Two</h1>
+<DemoTwo />
 {{! <DemoOne /> }}
 {{! <DemoOne /> }}
 {{! <DemoOne /> }}
