--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,9 +1,9 @@
 {{page-title 'EmberConcurrency'}}
-<h1>Demo one</h1>
-<DemoOne />
-{{! <DemoOne /> }}
-{{! <DemoOne /> }}
-{{! <DemoOne /> }}
-{{! <DemoOne /> }}
+{{! <h1>Demo one</h1>
+<DemoOne /> }}
+{{! <h1>Demo Two</h1>
+<DemoTwo /> }}
+<h1>Demo Three</h1>
+<DemoThree />
 
 {{outlet}}
