--- a/app/components/demo-four.hbs
+++ b/app/components/demo-four.hbs
@@ -7,3 +7,5 @@
 {{else}}
   <h3>{{this.getNumberTask.last.value}}</h3>
 {{/if}}
+
+<button type='button' {{on 'click' this.handleCancel}}>Cancel</button>
