--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -3,7 +3,9 @@
 <DemoOne /> }}
 {{! <h1>Demo Two</h1>
 <DemoTwo /> }}
-<h1>Demo Three</h1>
-<DemoThree />
+{{!-- <h1>Demo Three</h1>
+<DemoThree /> --}}
+<h1>Demo Four</h1>
+<DemoFour />
 
 {{outlet}}
